--- a/template/css/style.css
+++ b/template/css/style.css
@@ -10,12 +10,19 @@
 .navbar-light .navbar-nav .active>.nav-link {
     color: white;
 }
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover{
+    color: white;
+}
 .fixed-top.scrolled {
     background-color: #fff !important;
     color: rgba(0,0,0,.5);
     transition: background-color 200ms linear;
 }
 .scrolled-link {
+    color: rgba(0,0,0,.5) !important;
+}
+.scrolled-link:hover
+{
     color: rgba(0,0,0,.5) !important;
 }
 .carousel_img {
@@ -25,6 +32,12 @@
 .carousel-caption {
     bottom: 230px !important;
 }
+
+.hr{
+    width: 80px;
+    color: rgba(0,0,0,.5);
+}
+
 .ibt_header h3 {
     font-weight: 300;
 }
@@ -105,7 +118,7 @@
     background-position: -1070px 0 !important;
 }
 
-.abt_us h2
+.abt_us h3
 {
     font-weight: 300;
 }
@@ -151,4 +164,166 @@
 {
     text-align: justify;
     font-weight: 300;
+}
+
+.ibt_portfolio h3
+{
+    font-weight: 300;
+}
+
+.ibt_portfolio p
+{
+    font-weight: 100;
+    text-align: justify;
+}
+
+
+.ibt_pf_icons .ibt_pf_sprite_icons{
+    position: relative;
+    display: block;
+    margin: 0 auto;
+    width: 100px;
+    height:100px;
+    background: url(../img/sprite_2.1.png);
+    text-align: center;
+}
+.ibt_pf_icons h5 {
+    font-weight: 300;
+    font-size: 18px;
+    margin-top: 5%;
+}
+
+.ibt_pf_icons p{
+    font-size: 13px;
+    font-weight: 100;
+    text-align: justify;
+    padding: 12px;
+}
+
+.wh_icon {
+    background-position: -40px 0 !important;
+}
+
+.bi_icon{
+    background-position: -165px 0 !important;
+}
+
+.sap_icon{
+    background-position: -290px 0 !important;
+}
+
+.bui_icon{
+    background-position: -435px 0 !important;
+}
+
+.ma_icon {
+    background-position: -550px 0 !important;
+}
+
+.esb_icon{
+    background-position: -670px 0 !important;
+}
+
+.pf_icon{
+    background-position: -785px 0 !important;
+}
+
+.html_icon{
+    background-position: -945px 0 !important;
+}
+
+
+.pf_hr {
+    width: 80px;
+    color: rgba(0,0,0,.5);
+}
+
+.join_us h3 {
+    font-weight: 300;
+}
+
+.join_us h5 {
+    font-weight: 300;
+}
+
+.join_us p {
+    font-weight: 100;
+}
+.join_us a {
+    text-decoration: none;
+}
+
+.join_us a:focus {
+    outline: none;
+}
+
+.contact_us h3 {
+    font-weight: 300;
+}
+
+.contact_us h5 {
+    font-weight: 300;
+}
+
+.contact_us h6 {
+    font-weight: 300;
+}
+
+.location_address p {
+    font-weight: 100;
+}
+
+.location_address a
+{
+    text-decoration: none;
+    color: #007bff !important;
+
+}
+
+.location_address a:focus
+{
+    outline: none;
+}
+
+.contact_us a {
+    text-decoration: none;
+    color: #FDAC4C;
+}
+
+.contact_us a:focus {
+    outline: none;
+}
+.text_area{
+    height: 149px !important;
+}
+
+.form_modal p{
+    font-size: 12px;
+    font-weight: 100;
+}
+
+.connect_us h3{
+    font-weight: 300;
+}
+
+.connect_us a {
+    text-decoration: none;
+    margin-right: 15px;
+    color: black;
+}
+
+.connect_us .message:hover {
+    color: #CECB26;
+}
+
+.connect_us .twitter:hover{
+    color: #2ac6f7;
+}
+
+.connect_us .facebook:hover{
+    color: #3b5999;
+}
+
+.connect_us .linkedin:hover{
+    color: #036dc0;
 }
