--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@
     margin: 0 auto;
     width: 130px;
     height:100px;
-    background: url(../img/sprite.png);
+    background: url(../img/sprite_1.1.png);
     text-align: center;
 }
 
@@ -577,7 +577,7 @@
     margin: 0 auto;
     width: 130px;
     height:100px;
-    background: url(../img/sprite.png);
+    background: url(../img/sprite_1.1.png);
     text-align: center;
 }
 
@@ -1005,7 +1005,7 @@
     margin: 0 auto;
     width: 130px;
     height:100px;
-    background: url(../img/sprite.png);
+    background: url(../img/sprite_1.1.png);
     text-align: center;
 }
 
@@ -1387,7 +1387,7 @@
     margin: 0 auto;
     width: 130px;
     height:100px;
-    background: url(../img/sprite.png);
+    background: url(../img/sprite_1.1.png);
     text-align: center;
 }
 
@@ -1797,7 +1797,7 @@
     margin: 0 auto;
     width: 130px;
     height:100px;
-    background: url(../img/sprite.png);
+    background: url(../img/sprite_1.1.png);
     text-align: center;
 }
 
@@ -2213,7 +2213,7 @@
     margin: 0 auto;
     width: 130px;
     height:100px;
-    background: url(../img/sprite.png);
+    background: url(../img/sprite_1.1.png);
     text-align: center;
 }
 
@@ -2629,7 +2629,7 @@
     margin: 0 auto;
     width: 130px;
     height:100px;
-    background: url(../img/sprite.png);
+    background: url(../img/sprite_1.1.png);
     text-align: center;
 }
 
