--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+html,body {
+        width: 100%;
+        height: 100%;
+        position: relative; 
+}
+
+
 @font-face {
    font-family: myFirstFont;
    src: url(../fonts/eurostile-webfont.woff);
@@ -10,6 +17,19 @@
 .ibt_animated {
   animation-duration: 1s;
   animation-fill-mode: both;
+}
+
+.card{
+	 box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card-block p{
+	line-height: 1.1;
 }
 /* Screen below 400 */
 @media (min-width: 320px) and (max-width: 390px){
@@ -2833,6 +2853,7 @@
 }
 
 .join_us p {
+	font-size: 20px;
     font-weight: 100;
 	
 }
